--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Espetinho Delivery ZD",
-  "short_name": "ESPETINHO DELIVERY ZD",
+  "name": "WL Transportes - Distribuição",
+  "short_name": "WL Transportes - Distribuição",
   "start_url": "/Espetinho-Delivery-ZD/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "logo1.png",
+      "src": "favicon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "logo1.png",
+      "src": "favicon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
