--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "WL Transportes - Distribuição",
   "short_name": "WL Transportes - Distribuição",
-  "start_url": "/Espetinho-Delivery-ZD/index.html",
+  "start_url": "https://espetinho-delivery-zd.github.io/motoboyzd/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#b71c1c",
